Correct field name in code
